--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -13,3 +13,17 @@ source.host=run.mocky.io
 source.port=443
 source.basepath=/v3/3fc3dab0-c55f-4a1a-9834-3ca25070cf24
 ###################################
+#################
+http.listener.path=/emp/info
+app.name=emp-info
+source.host=run.mocky.io
+source.port=443
+source.basepath=/v3/3fc3dab0-c55f-4a1a-9834-3ca25070cf24
+###################################
+#################
+http.listener.path=/emp/info
+app.name=emp-info-1
+source.host=run.mocky.io
+source.port=443
+source.basepath=/v3/3fc3dab0-c55f-4a1a-9834-3ca25070cf24
+###################################
